==> hazy1k/STM32-Study-Notes/3.开发板必备资料/模块资料/MP3/配套程序/F407_骄阳开发板/1.VS1053_外部FLASH读歌/User/vs1053/VS1053.c <==
#include  "VS1053.h"
#include "./usart/bsp_debug_usart.h"
#include "string.h"

unsigned char SPI2_ReadWriteByte(uint8_t  byte)
{
  
  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* 等待发送缓冲区为空，TXE事件 */
  while (__HAL_SPI_GET_FLAG( &VS_SpiHandle, SPI_FLAG_TXE ) == RESET)
   {
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(0);
   }

  /* 写入数据寄存器，把要写入的数据写入发送缓冲区 */
  WRITE_REG(VS_SpiHandle.Instance->DR, byte);

  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* 等待接收缓冲区非空，RXNE事件 */
  while (__HAL_SPI_GET_FLAG( &VS_SpiHandle, SPI_FLAG_RXNE ) == RESET)
   {
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(1);
   }

  /* 读取数据寄存器，获取接收缓冲区数据 */
  return READ_REG(VS_SpiHandle.Instance->DR);

}

static void SPI_SetSpeed(uint8_t SpeedSet)
{
	assert_param(IS_SPI_BAUDRATE_PRESCALER(SPI_BaudRatePrescaler));
	SPI2->CR1&=0XFFC7; 
	SPI2->CR1|=SpeedSet;
	__HAL_SPI_ENABLE(&VS_SpiHandle); 
}

void VS_Init(void)
{
  /*定义一个GPIO_InitTypeDef类型的结构体*/
  GPIO_InitTypeDef GPIO_InitStructure;
  
  __HAL_RCC_GPIOI_CLK_ENABLE();
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOC_CLK_ENABLE();
  __HAL_RCC_GPIOH_CLK_ENABLE();	
  SPIx_CLK_ENABLE();
  
	/*选择要控制的GPIO引脚*/															   
	GPIO_InitStructure.Pin = VS_DREQ;	
	GPIO_InitStructure.Mode  =GPIO_MODE_INPUT;  
	GPIO_InitStructure.Pull  = GPIO_PULLUP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(VS_GPIO_DREQ_PORT, &GPIO_InitStructure);	
															 
	GPIO_InitStructure.Pin = VS_RST;	
	GPIO_InitStructure.Mode  =GPIO_MODE_OUTPUT_PP; 
	HAL_GPIO_Init(VS_GPIO_RST_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = VS_XCS;
	HAL_GPIO_Init(VS_SPIGPIO_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = VS_XDCS;
	HAL_GPIO_Init(VS_GPIO_XDCS_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.Pin =VS_SCLK | VS_MISO | VS_MOSI;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Alternate = GPIO_AF5_SPI2;
	HAL_GPIO_Init(VS_SPIGPIO_PORT, &GPIO_InitStructure);  
  //-----SPI配置---------------------------------------------------------------
  
  VS_SpiHandle.Instance               = VS_SPI;
  VS_SpiHandle.Init.Mode              = SPI_MODE_MASTER;
  VS_SpiHandle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_256;
  VS_SpiHandle.Init.Direction         = SPI_DIRECTION_2LINES;
  VS_SpiHandle.Init.CLKPhase          = SPI_PHASE_2EDGE;
  VS_SpiHandle.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  VS_SpiHandle.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLE;
  VS_SpiHandle.Init.CRCPolynomial     = 7;
  VS_SpiHandle.Init.DataSize          = SPI_DATASIZE_8BIT;
  VS_SpiHandle.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  VS_SpiHandle.Init.NSS               = SPI_NSS_SOFT;
  VS_SpiHandle.Init.TIMode            = SPI_TIMODE_DISABLE;

  HAL_SPI_Init(&VS_SpiHandle); 
  
  __HAL_SPI_ENABLE(&VS_SpiHandle);   
	
}
